[gd_scene load_steps=12 format=3 uid="uid://duudbmfp78pm3"]

[ext_resource type="Script" uid="uid://cno5jb4vql1lp" path="res://scripts/player_state_manager.gd" id="1_j4bpf"]

[sub_resource type="Animation" id="Animation_68npl"]
resource_name = "RESET"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(3, 3)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:scale:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite:scale:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_jnykh"]
resource_name = "idle"
length = 3.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:scale:x")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.25, 2.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [3.1, 2.9, 3.1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:scale:y")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.25, 2.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [2.9, 3.1, 2.9]
}

[sub_resource type="Animation" id="Animation_v8ogu"]
resource_name = "walk"
length = 0.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -6), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7hpyj"]
_data = {
&"RESET": SubResource("Animation_68npl"),
&"idle": SubResource("Animation_jnykh"),
&"walk": SubResource("Animation_v8ogu")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_t7ucm"]
animation = &"idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_jnykh"]
animation = &"walk"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_68npl"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_v8ogu"]
advance_mode = 2
advance_expression = "self.state == State.WALKING"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_7hpyj"]
advance_mode = 2
advance_expression = "self.state == State.IDLE"

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_jd23p"]
states/End/position = Vector2(495, 216)
states/Start/position = Vector2(194, 216)
states/idle/node = SubResource("AnimationNodeAnimation_t7ucm")
states/idle/position = Vector2(343, 153)
states/walk/node = SubResource("AnimationNodeAnimation_jnykh")
states/walk/position = Vector2(343, 281)
transitions = ["Start", "idle", SubResource("AnimationNodeStateMachineTransition_68npl"), "idle", "walk", SubResource("AnimationNodeStateMachineTransition_v8ogu"), "walk", "idle", SubResource("AnimationNodeStateMachineTransition_7hpyj")]

[node name="PlayerStateManager" type="Node"]
script = ExtResource("1_j4bpf")

[node name="SpriteAnimator" type="AnimationPlayer" parent="."]
root_node = NodePath("../..")
libraries = {
&"": SubResource("AnimationLibrary_7hpyj")
}

[node name="SpriteAnimTree" type="AnimationTree" parent="."]
root_node = NodePath("../..")
tree_root = SubResource("AnimationNodeStateMachine_jd23p")
advance_expression_base_node = NodePath("..")
anim_player = NodePath("../SpriteAnimator")

[connection signal="state_changed" from="." to="." method="_on_state_changed"]
